classDiagram
    class BaseModel {
        <<Abstract>>
        +id: UUID
        +created_at: DateTime
        +updated_at: DateTime
        +save(): void
        +delete(): void
        +to_dict(): Dict
    }

    class User {
        +first_name: String
        +last_name: String
        +email: String
        +password_hash: String
        +is_admin: Boolean
        +authenticate(password: String): Boolean
        +update_profile(updates: Dict): Boolean
        +change_password(old_pass: String, new_pass: String): Boolean
    }

    class Place {
        +title: String
        +description: String
        +price_per_night: Decimal
        +latitude: Float
        +longitude: Float
        +max_guests: Integer
        +calculate_total_price(nights: Integer): Decimal
        +get_average_rating(): Float
    }

    class Review {
        +rating: Integer (1-5)
        +comment: String
        +update_comment(new_comment: String): void
        +update_rating(new_rating: Integer): void
    }

    class Amenity {
        +name: String
        +description: String
        +icon: String
    }

    BaseModel <|-- User
    BaseModel <|-- Place
    BaseModel <|-- Review
    BaseModel <|-- Amenity

    User "1" -- "0..*" Place : owns
    User "1" -- "0..*" Review : writes
    Place "1" -- "0..*" Review : has
    Place "0..*" -- "0..*" Amenity : has